--- a/tic-tac-toe/src/App.css
+++ b/tic-tac-toe/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+.game {
+  margin: 50px auto;
+}
+.status {
+  margin-bottom: 30px;
+  font-size: 24px;
+  font-weight: bold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.board-table {
+  border-collapse: collapse;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.board-row {
+  display: flex;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.square {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #000;
+  font-size: 24px;
+  cursor: pointer;
+  background-color: #ffffff;
+}
+
+.square:hover {
+  background-color: #c8e7fa;
+}
+
+
+.game-info-list {
+  padding: 0;
+  list-style-type: none;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.game-info-item {
+  width: 100%;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.game-info-btn {
+  background-color: #9cd9ff;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 5px;
+  font-size: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.game-info-btn:hover {
+  background-color: #69c6ff;
+}
+
+.game-info-btn.current-move {
+  background-color: #d7d7d7;
 }
